// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Record Component renders Record component correctly when not selected 1`] = `
<DocumentFragment>
  <div
    class="sc-jwTyAe fRvxyq"
  >
    <div
      class="sc-hjsuWn csvKvW"
    >
      <div>
        RecordAvatar
      </div>
      <div
        class="sc-jJLAfE iNXFiA"
      >
        <span>
          Test Record Title
        </span>
        <p>
          Test Folder
        </p>
      </div>
    </div>
    <div
      class="sc-hwkwBN cVhJEV"
    >
       
      <div
        class="sc-dYwGCk hCtweO"
      >
        <div
          class="sc-fhHczv dUVhHQ"
        >
          <div
            class="sc-dTvVRJ kDBiCF"
          >
            <div
              data-testid="list-item-threedots"
            >
              <svg
                data-testid="kebab-icon"
              />
            </div>
          </div>
          <div
            class="sc-ggWZvA klnXgK"
          >
            <div
              data-testid="record-actions-popup-content"
            >
              RecordActionsPopupContent
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Record Component renders Record component correctly when selected 1`] = `
<DocumentFragment>
  <div
    class="sc-jwTyAe kUEaMX"
  >
    <div
      class="sc-hjsuWn csvKvW"
    >
      <div>
        RecordAvatar
      </div>
      <div
        class="sc-jJLAfE iNXFiA"
      >
        <span>
          Test Record Title
        </span>
        <p>
          Test Folder
        </p>
      </div>
    </div>
    <div
      class="sc-hwkwBN cVhJEV"
    />
  </div>
</DocumentFragment>
`;

exports[`Record Component toggles action menu when kebab icon is clicked (snapshot test): after toggle 1`] = `
<DocumentFragment>
  <div
    class="sc-jwTyAe gxUNjD"
  >
    <div
      class="sc-hjsuWn csvKvW"
    >
      <div>
        RecordAvatar
      </div>
      <div
        class="sc-jJLAfE iNXFiA"
      >
        <span>
          Test Record Title
        </span>
        <p>
          Test Folder
        </p>
      </div>
    </div>
    <div
      class="sc-hwkwBN cVhJEV"
    >
       
      <div
        class="sc-dYwGCk hCtweO"
      >
        <div
          class="sc-fhHczv dUVhHQ"
        >
          <div
            class="sc-dTvVRJ kDBiCF"
          >
            <div
              data-testid="list-item-threedots"
            >
              <svg
                data-testid="kebab-icon"
              />
            </div>
          </div>
          <div
            class="sc-ggWZvA cgxZwK"
          >
            <div
              data-testid="record-actions-popup-content"
            >
              RecordActionsPopupContent
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Record Component toggles action menu when kebab icon is clicked (snapshot test): initial state 1`] = `
<DocumentFragment>
  <div
    class="sc-jwTyAe fRvxyq"
  >
    <div
      class="sc-hjsuWn csvKvW"
    >
      <div>
        RecordAvatar
      </div>
      <div
        class="sc-jJLAfE iNXFiA"
      >
        <span>
          Test Record Title
        </span>
        <p>
          Test Folder
        </p>
      </div>
    </div>
    <div
      class="sc-hwkwBN cVhJEV"
    >
       
      <div
        class="sc-dYwGCk hCtweO"
      >
        <div
          class="sc-fhHczv dUVhHQ"
        >
          <div
            class="sc-dTvVRJ kDBiCF"
          >
            <div
              data-testid="list-item-threedots"
            >
              <svg
                data-testid="kebab-icon"
              />
            </div>
          </div>
          <div
            class="sc-ggWZvA klnXgK"
          >
            <div
              data-testid="record-actions-popup-content"
            >
              RecordActionsPopupContent
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
